<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/reg_bg"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/reg_logo"
            android:id="@+id/imageView" />

        <TextView
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent"
            android:hint="@string/hint_name"
            android:drawableRight="@drawable/ic_person_black_24dp"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent"
            android:hint="@string/hint_email"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent"
            android:hint="@string/hint_password"
            android:drawableRight="@drawable/ic_vpn_key_black_24dp"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:padding="15dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_register"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/tv_login"

            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/btn_link_to_login"
            android:textSize="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/progress"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </LinearLayout>

    </ScrollView>

</LinearLayout>