<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:elevation="3dp"
    app:cardCornerRadius="10dp"
    card_view:cardCornerRadius="@dimen/card_album_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_transparent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/recent_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/border"
                android:padding="5dp"
                android:text="description"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/recent_subCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recent_price"
                android:paddingLeft="@dimen/small_10dp"
                android:paddingRight="@dimen/small_10dp"
                android:text="@string/subCategory"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/recent_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recent_subCategory"
                android:paddingBottom="@dimen/small_10dp"
                android:paddingLeft="@dimen/small_10dp"
                android:paddingRight="@dimen/small_10dp"
                android:text="timestamp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:id="@+id/recent_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:paddingLeft="@dimen/small_10dp"
                android:paddingRight="@dimen/small_10dp"
                android:text="@string/priceFormat"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/recent_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/small_10dp"
                android:paddingLeft="@dimen/small_10dp"
                android:paddingRight="@dimen/small_10dp"
                android:text="@string/category"
                android:visibility="gone" />

            <TextView
                android:id="@+id/recent_id"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/small_10dp"
                android:paddingLeft="@dimen/small_10dp"
                android:paddingRight="@dimen/small_10dp"
                android:text="TextView" />

            <ImageView
                android:id="@+id/overflow"
                android:layout_width="10dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/imageView"
                android:layout_marginTop="@dimen/small_10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_dots" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

